--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^5.8.0",
     "@react-navigation/stack": "^5.10.0",
     "expo": "~39.0.2",
+    "expo-image-picker": "~9.1.0",
     "expo-status-bar": "~1.0.2",
     "firebase": "^8.0.0",
     "react": "16.13.1",
