--- a/package.json
+++ b/package.json
@@ -8,19 +8,24 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/lobster": "^0.1.0",
+    "@expo-google-fonts/roboto": "^0.1.0",
+    "@react-native-community/datetimepicker": "3.0.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.10.0",
     "@react-navigation/material-top-tabs": "^5.3.0",
     "@react-navigation/native": "^5.8.0",
     "@react-navigation/stack": "^5.10.0",
     "expo": "~39.0.2",
+    "expo-font": "~8.3.0",
     "expo-image-picker": "~9.1.0",
     "expo-status-bar": "~1.0.2",
     "firebase": "^8.0.0",
-    "react": "16.13.1",
+    "react": "^17.0.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
     "react-native-gesture-handler": "~1.7.0",
+    "react-native-paper": "^4.3.1",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
